force-app/main/default/objects/OP_Teilnehmer__c/OP_Teilnehmer__c.object-meta.xml
<CustomObject>
    <label>Kostenverteilung</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kostenverteilungen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>