force-app/main/default/objects/OP_Teilnehmer__c/fields/Bemerkungen__c.field-meta.xml
<CustomField>
    <fullName>Bemerkungen__c</fullName>
    <label>Bemerkungen</label>
    <length>64000</length>
    <type>LongTextArea</type>
</CustomField>