force-app/main/default/objects/OP_Teilnehmer__c/fields/Buchungsdatum__c.field-meta.xml
<CustomField>
    <fullName>Buchungsdatum__c</fullName>
    <label>Buchungsdatum</label>
    <type>Date</type>
</CustomField>