force-app/main/default/objects/OP_Teilnehmer__c/fields/Individuelle_Istkosten__c.field-meta.xml
<CustomField>
    <fullName>Individuelle_Istkosten__c</fullName>
    <label>Individuelle Istkosten</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>