force-app/main/default/objects/OP_Teilnehmer__c/fields/Individuelle_Plankosten__c.field-meta.xml
<CustomField>
    <fullName>Individuelle_Plankosten__c</fullName>
    <label>Individuelle Plankosten</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>