force-app/main/default/objects/OP_Teilnehmer__c/fields/Istkosten_Gesamt__c.field-meta.xml
<CustomField>
    <fullName>Istkosten_Gesamt__c</fullName>
    <formula>Anteilige_Istkosten__c +  Individuelle_Istkosten__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Istkosten Gesamt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>