force-app/main/default/objects/OP_Teilnehmer__c/fields/Organisationspunkt__c.field-meta.xml
<CustomField>
    <fullName>Organisationspunkt__c</fullName>
    <label>Organisationspunkt</label>
    <referenceTo>Organisationspunkt__c</referenceTo>
    <relationshipName>OP_Teilnehmer</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>