force-app/main/default/objects/OP_Teilnehmer__c/fields/Organisator__c.field-meta.xml
<CustomField>
    <fullName>Organisator__c</fullName>
    <formula>Organisationspunkt__r.Organisator__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organisator</label>
    <type>Text</type>
</CustomField>