force-app/main/default/objects/OP_Teilnehmer__c/fields/Plankosten_Gesamt__c.field-meta.xml
<CustomField>
    <fullName>Plankosten_Gesamt__c</fullName>
    <formula>Anteilige_Plankosten__c +  Individuelle_Plankosten__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plankosten Gesamt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>