force-app/main/default/objects/OP_Teilnehmer__c/fields/Reise__c.field-meta.xml
<CustomField>
    <fullName>Reise__c</fullName>
    <formula>Organisationspunkt__r.Reise__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reise</label>
    <type>Text</type>
</CustomField>