force-app/main/default/objects/OP_Teilnehmer__c/fields/Teilnehmer__c.field-meta.xml
<CustomField>
    <fullName>Teilnehmer__c</fullName>
    <label>Teilnehmer</label>
    <referenceTo>Teilnehmer__c</referenceTo>
    <relationshipName>OP_Teilnehmer</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>