force-app/main/default/objects/OP_Teilnehmer__c/fields/TN_Name__c.field-meta.xml
<CustomField>
    <fullName>TN_Name__c</fullName>
    <label>TN Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>