force-app/main/default/objects/OP_Teilnehmer__c/fields/TN_Status__c.field-meta.xml
<CustomField>
    <fullName>TN_Status__c</fullName>
    <formula>TEXT(Teilnehmer__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TN Status</label>
    <type>Text</type>
</CustomField>