force-app/main/default/objects/OP_Teilnehmer__c/fields/Verantwortlich__c.field-meta.xml
<CustomField>
    <fullName>Verantwortlich__c</fullName>
    <formula>Organisationspunkt__r.Verantwortlich__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verantwortlich</label>
    <type>Text</type>
</CustomField>