force-app/main/default/objects/OP_Teilnehmer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Organisationspunkt__c</columns>
    <columns>Teilnehmer__c</columns>
    <columns>Buchungsdatum__c</columns>
    <columns>Individuelle_Istkosten__c</columns>
    <columns>Individuelle_Plankosten__c</columns>
    <columns>Anteilige_Istkosten__c</columns>
    <columns>Anteilige_Plankosten__c</columns>
    <filterScope>Everything</filterScope>
    <label>Alle</label>
</ListView>